[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/arlrdbd.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Gender Selection/GenderSelectLayer.gd" type="Script" id=2]
[ext_resource path="res://scripts/Gender Selection/Female.gd" type="Script" id=3]
[ext_resource path="res://scripts/Gender Selection/Male.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 47
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Gender Selection:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Male:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Female:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../or:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "GenderChosen"
tracks/0/type = "value"
tracks/0/path = NodePath("../ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "NextScene"
} ]
}

[sub_resource type="DynamicFont" id=4]
size = 41
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gender Selection" type="RichTextLabel" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -248.0
margin_top = -296.0
margin_right = 248.0
margin_bottom = -232.0
custom_fonts/normal_font = SubResource( 1 )
text = "GENDER SELECTION"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../ColorRect")
anims/Fade_In = SubResource( 2 )
anims/GenderChosen = SubResource( 3 )

[node name="Female" type="RichTextLabel" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 534.0
margin_top = 269.0
margin_right = 1019.0
margin_bottom = 318.0
custom_fonts/normal_font = SubResource( 4 )
text = "Female (coming soon)"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
mouse_over = Color( 1, 0, 0.984314, 1 )
mouse_out = Color( 1, 1, 1, 1 )

[node name="Male" type="RichTextLabel" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 380.228
margin_top = 268.088
margin_right = 486.228
margin_bottom = 324.088
custom_fonts/normal_font = SubResource( 5 )
text = "Male"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
mouse_over = Color( 0, 0.133333, 1, 1 )
mouse_out = Color( 1, 1, 1, 1 )

[node name="or" type="RichTextLabel" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.2094
margin_top = -22.0
margin_right = 18.7906
margin_bottom = 22.0
custom_fonts/normal_font = SubResource( 6 )
text = "or"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="CanvasLayer/Female" to="CanvasLayer/Female" method="_on_Female_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/Female" to="CanvasLayer/Female" method="_on_Female_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Female" to="CanvasLayer/Female" method="_on_Female_mouse_exited"]
[connection signal="gui_input" from="CanvasLayer/Male" to="CanvasLayer" method="_on_Male_gui_input"]
[connection signal="gui_input" from="CanvasLayer/Male" to="CanvasLayer/Male" method="_on_Male_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/Male" to="CanvasLayer/Male" method="_on_Male_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Male" to="CanvasLayer/Male" method="_on_Male_mouse_exited"]
